--- a/categorical_variable_encoding.ipynb
+++ b/categorical_variable_encoding.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T13:03:38.474648Z",
-     "start_time": "2020-06-30T13:03:36.834618Z"
+     "end_time": "2020-07-01T13:28:32.699944Z",
+     "start_time": "2020-07-01T13:28:31.590906Z"
     }
    },
    "outputs": [],
@@ -4921,7 +4921,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Target Guided Encoding or Ordered Integer Encoding\n",
     "\n",
@@ -4945,7 +4947,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T12:51:56.837062Z",
      "start_time": "2020-07-01T12:51:56.702944Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -4990,7 +4993,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T12:52:48.595164Z",
      "start_time": "2020-07-01T12:52:48.101354Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5043,7 +5047,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Ordered Integer Encoding with Pandas"
    ]
@@ -5055,7 +5061,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T12:54:40.502370Z",
      "start_time": "2020-07-01T12:54:40.493654Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5107,7 +5114,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T12:56:09.407927Z",
      "start_time": "2020-07-01T12:56:09.399638Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5138,7 +5146,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T12:57:15.876052Z",
      "start_time": "2020-07-01T12:57:15.871559Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5192,7 +5201,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T12:58:59.520711Z",
      "start_time": "2020-07-01T12:58:59.512909Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5225,7 +5235,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T12:59:11.841928Z",
      "start_time": "2020-07-01T12:59:11.832684Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5320,7 +5331,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T13:02:31.983062Z",
      "start_time": "2020-07-01T13:02:31.979142Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -5342,7 +5354,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T13:04:15.423367Z",
      "start_time": "2020-07-01T13:04:15.405060Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -5359,7 +5372,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T13:04:21.725132Z",
      "start_time": "2020-07-01T13:04:21.716166Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5454,7 +5468,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T13:05:08.780007Z",
      "start_time": "2020-07-01T13:05:08.397084Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5506,7 +5521,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Ordered Integer encoding with Feature Engine"
    ]
@@ -5518,7 +5535,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T13:06:38.612920Z",
      "start_time": "2020-07-01T13:06:38.605121Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5551,7 +5569,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T13:09:24.817271Z",
      "start_time": "2020-07-01T13:09:24.800347Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5583,6 +5602,7 @@
      "end_time": "2020-07-01T13:09:37.620367Z",
      "start_time": "2020-07-01T13:09:37.615815Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -5663,7 +5683,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-01T13:09:58.380579Z",
      "start_time": "2020-07-01T13:09:58.376987Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5683,13 +5704,266 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T13:11:00.110821Z",
+     "start_time": "2020-07-01T13:11:00.090174Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Exterior1st</th>\n",
+       "      <th>Exterior2nd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>16</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>17</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Neighborhood  Exterior1st  Exterior2nd\n",
+       "64              16           11           13\n",
+       "682             17            5            7\n",
+       "960              4            5            8\n",
+       "1384             3            4            4\n",
+       "1100             8            5            7"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now lets apply transformation\n",
+    "x_train = ordinal_encoder.transform(x_train)\n",
+    "x_test = ordinal_encoder.transform(x_test)\n",
+    "x_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mean Encoding \n",
+    "\n",
+    "<b> Advantages of target guided encodings:</b>\n",
+    "\n",
+    "- Captures information within the category, therefore creating more predictive features\n",
+    "- Creates a monotonic relationship between the variable and the target, therefore suitable for linear models\n",
+    "- Do not expand the feature space\n",
+    "\n",
+    "\n",
+    "<b> Limitations:</b>\n",
+    "\n",
+    "- Prone to cause over-fitting\n",
+    "- Difficult to cross-validate with current libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T13:28:36.228953Z",
+     "start_time": "2020-07-01T13:28:36.207039Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survived</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cabin</th>\n",
+       "      <th>embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>B5</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>C22</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>C22</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>C22</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>C22</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   survived     sex cabin embarked\n",
+       "0         1  female    B5        S\n",
+       "1         1    male   C22        S\n",
+       "2         0  female   C22        S\n",
+       "3         0    male   C22        S\n",
+       "4         0  female   C22        S"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\n",
+    "    'data/titanic.csv',\n",
+    "    usecols=['cabin', 'sex', 'embarked', 'survived'])\n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-01T13:29:12.074518Z",
+     "start_time": "2020-07-01T13:29:12.070202Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['B5', 'C22', 'E12', 'D7', 'A36', 'C101', nan, 'C62', 'B35', 'A23',\n",
+       "       'B58', 'D15', 'C6', 'D35', 'C148', 'C97', 'B49', 'C99', 'C52', 'T',\n",
+       "       'A31', 'C7', 'C103', 'D22', 'E33', 'A21', 'B10', 'B4', 'E40',\n",
+       "       'B38', 'E24', 'B51', 'B96', 'C46', 'E31', 'E8', 'B61', 'B77', 'A9',\n",
+       "       'C89', 'A14', 'E58', 'E49', 'E52', 'E45', 'B22', 'B26', 'C85',\n",
+       "       'E17', 'B71', 'B20', 'A34', 'C86', 'A16', 'A20', 'A18', 'C54',\n",
+       "       'C45', 'D20', 'A29', 'C95', 'E25', 'C111', 'C23', 'E36', 'D34',\n",
+       "       'D40', 'B39', 'B41', 'B102', 'C123', 'E63', 'C130', 'B86', 'C92',\n",
+       "       'A5', 'C51', 'B42', 'C91', 'C125', 'D10', 'B82', 'E50', 'D33',\n",
+       "       'C83', 'B94', 'D49', 'D45', 'B69', 'B11', 'E46', 'C39', 'B18',\n",
+       "       'D11', 'C93', 'B28', 'C49', 'B52', 'E60', 'C132', 'B37', 'D21',\n",
+       "       'D19', 'C124', 'D17', 'B101', 'D28', 'D6', 'D9', 'B80', 'C106',\n",
+       "       'B79', 'C47', 'D30', 'C90', 'E38', 'C78', 'C30', 'C118', 'D36',\n",
+       "       'D48', 'D47', 'C105', 'B36', 'B30', 'D43', 'B24', 'C2', 'C65',\n",
+       "       'B73', 'C104', 'C110', 'C50', 'B3', 'A24', 'A32', 'A11', 'A10',\n",
+       "       'B57', 'C28', 'E44', 'A26', 'A6', 'A7', 'C31', 'A19', 'B45', 'E34',\n",
+       "       'B78', 'B50', 'C87', 'C116', 'C55', 'D50', 'E68', 'E67', 'C126',\n",
+       "       'C68', 'C70', 'C53', 'B19', 'D46', 'D37', 'D26', 'C32', 'C80',\n",
+       "       'C82', 'C128', 'E39', 'D', 'F4', 'D56', 'F33', 'E101', 'E77', 'F2',\n",
+       "       'D38', 'F', 'E121', 'E10', 'G6', 'F38'], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets fill all the missing values\n",
+    "data[\"cabin\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# now lets apply transformation\n",
-    "x_train = ordinal_encoder.transform(x_train)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
